--- a/bip/mnemonic.html
+++ b/bip/mnemonic.html
@@ -68,11 +68,10 @@
           <option value="EOS">EOS（m/44'/194'/0'/0，EOS Legacy + PUB_K1_）</option>
         </select>
       </label>
-      <!-- 新增：index 输入 -->
       <label>索引：
         <input id="in-index" type="number" inputmode="numeric" min="0" step="1" value="0" style="width:110px"/>
       </label>
-      <button id="btn-derive-chain" disabled>生成</button>
+      <button id="btn-derive-chain">生成</button>
       <span id="ch-tip" class="muted"></span>
     </div>
 
@@ -250,8 +249,7 @@ document.addEventListener('DOMContentLoaded', async ()=>{
       $('out-root-xpub').textContent = ru;
       $('root-box').style.display = 'block';
 
-      $('btn-derive-chain').disabled = false;
-      tip.textContent = '就绪';
+      $('ch-tip').textContent = '就绪';
     }catch(e){
       tip.innerHTML = '<span class="err">失败：'+(e?.message||e)+'</span>';
       console.error(e);
@@ -329,7 +327,6 @@ document.addEventListener('DOMContentLoaded', async ()=>{
         lblX.textContent='BIP32 Extended Private Key：';
         lblU.textContent='BIP32 Extended Public Key：';
         outX.textContent=await serXPRV(n.key,n.chain,n.depth,n.parentFP,n.child);
-        outU.textContent=await serXPUB(n.pub,n.chain,n.depth,n,parentFP=n.parentFP,n.child); // 避免误写，下一行替换为正确版本：
         outU.textContent=await serXPUB(n.pub,n.chain,n.depth,n.parentFP,n.child);
         $('addr-title').textContent=`地址 ${index}（TRON）：`;
         outA.textContent=addr;
@@ -343,7 +340,6 @@ document.addEventListener('DOMContentLoaded', async ()=>{
 
         lblX.textContent='BIP32 Extended Private Key：';
         lblU.textContent='BIP32 Extended Public Key：';
-        outX.textContent=await serXPRV(n.key,n.chain,n.depth,n,parentFP=n.parentFP,n.child); // 避免误写，下一行替换为正确版本：
         outX.textContent=await serXPRV(n.key,n.chain,n.depth,n.parentFP,n.child);
         outU.textContent=await serXPUB(n.pub,n.chain,n.depth,n.parentFP,n.child);
         $('addr-title').textContent=`示例 /${index} 公钥（EOS…）：`;
